first commit for asus xtion2 successful.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,9 +35,10 @@ if(APPLE)
 elseif(UNIX)
     if(CMAKE_SIZEOF_VOID_P EQUAL 8)
         configure_file(${CMAKE_CURRENT_SOURCE_DIR}/OpenNI2/libOpenNI2x64.so ${CMAKE_CURRENT_BINARY_DIR}/libOpenNI2.so COPYONLY)
-        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/OpenNI2/libDummyDevicex64.so ${CMAKE_CURRENT_BINARY_DIR}/OpenNI2/Drivers/libDummyDevice.so COPYONLY)
+        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/OpenNI2/libOpenNI2x64_driver.so ${CMAKE_CURRENT_BINARY_DIR}/OpenNI2/Drivers/libOpenNI2.so COPYONLY)
         configure_file(${CMAKE_CURRENT_SOURCE_DIR}/OpenNI2/libOniFilex64.so ${CMAKE_CURRENT_BINARY_DIR}/OpenNI2/Drivers/libOniFile.so COPYONLY)
         configure_file(${CMAKE_CURRENT_SOURCE_DIR}/OpenNI2/libPS1080x64.so ${CMAKE_CURRENT_BINARY_DIR}/OpenNI2/Drivers/libPS1080.so COPYONLY)
+        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/OpenNI2/SenDuck.ini ${CMAKE_CURRENT_BINARY_DIR}/OpenNI2/Drivers/SenDuck.ini COPYONLY)
     else()
         configure_file(${CMAKE_CURRENT_SOURCE_DIR}/OpenNI2/libOpenNI2x86.so ${CMAKE_CURRENT_BINARY_DIR}/libOpenNI2.so COPYONLY)
         configure_file(${CMAKE_CURRENT_SOURCE_DIR}/OpenNI2/libDummyDevicex86.so ${CMAKE_CURRENT_BINARY_DIR}/OpenNI2/Drivers/libDummyDevice.so COPYONLY)
